test/sema/typeck/for/missing-method.out
error: `iter` not found in impl.
--> missing-method.dora:2:1 - 6:9
1 error found.
