test/sema/typeck/for/missing-method.dora
class Foo
impl std::traits::IntoIterator for Foo {
    type IteratorType = FooIter;
}

class FooIter

impl std::traits::Iterator for FooIter {
    type Item = Int32;
    fn next(): Option[Int32] { Some[Int32](0i32) }
}

fn f(): Int32 {
    for i in Foo() {
        return i;
    }
    return 0i32;
}

====================
error: `iter` not found in impl.
--> missing-method.dora:2:1 - 6:9
1 error found.
